fixed grid shift and upped size

--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@ body{
 }
 
 .title{
-    font-size: 55px;
+    font-size: 65px;
     color: white;
     font-weight: 700;
     height: 20vh;
@@ -33,15 +33,15 @@ body{
 .status{
     display: flex;
     justify-content: center;
-    font-size: 35px;
+    font-size: 45px;
     color: white;
     font-weight: 500;
 }
 
 .square{
-    width: 75px;
-    height: 75px;
-    font-size: 50px;
+    width: 100px;
+    height: 100px;
+    font-size: 60px;
     font-weight: 800;
     cursor: pointer;
     float: inline-start;
@@ -52,18 +52,18 @@ body{
 }
 
 .reset{
-    width: 130px;
+    width: 160px;
     margin: auto;
 }
 
 .play-again{
-    height: 40px;
-    width: 130px;
+    height: 50px;
+    width: 160px;
     background: white;
     border: 1px solid;
     border-color: black;
-    border-radius: 20px;
-    font-size: 15px;
+    border-radius: 30px;
+    font-size: 17px;
     cursor: pointer;
     margin-top: 20px;
     color: black;
